[package]
name = "riscv-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.8.1"
panic-halt = "0.2.0"
riscv = "0.7.0"
embedded-hal = "0.2.7"
nb = "0.1.3"

[profile.release]
# or "z"
opt-level = "s"